--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,69 @@
-pip install tensorflow==2.5.1
-pip install pillow==8.2.0
-pip install matplotlib==3.4.2
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: linux-64
+_libgcc_mutex=0.1=main
+_openmp_mutex=5.1=1_gnu
+absl-py=0.15.0=pypi_0
+astunparse=1.6.3=pypi_0
+ca-certificates=2022.07.19=h06a4308_0
+cached-property=1.5.2=pypi_0
+cachetools=5.2.0=pypi_0
+certifi=2022.6.15=py37h06a4308_0
+cloudpickle=2.1.0=pypi_0
+cycler=0.11.0=pypi_0
+decorator=5.1.1=pypi_0
+dm-tree=0.1.7=pypi_0
+flatbuffers=1.12=pypi_0
+fonttools=4.36.0=pypi_0
+gast=0.4.0=pypi_0
+google-auth=2.10.0=pypi_0
+google-auth-oauthlib=0.4.6=pypi_0
+google-pasta=0.2.0=pypi_0
+grpcio=1.34.1=pypi_0
+h5py=3.1.0=pypi_0
+importlib-metadata=4.12.0=pypi_0
+keras-nightly=2.5.0.dev2021032900=pypi_0
+keras-preprocessing=1.1.2=pypi_0
+kiwisolver=1.4.4=pypi_0
+libedit=3.1.20210910=h7f8727e_0
+libffi=3.2.1=hf484d3e_1007
+libgcc-ng=11.2.0=h1234567_1
+libgomp=11.2.0=h1234567_1
+libstdcxx-ng=11.2.0=h1234567_1
+markdown=3.4.1=pypi_0
+markupsafe=2.1.1=pypi_0
+matplotlib=3.5.3=pypi_0
+ncurses=6.3=h5eee18b_3
+numpy=1.19.5=pypi_0
+oauthlib=3.2.0=pypi_0
+openssl=1.1.1q=h7f8727e_0
+packaging=21.3=pypi_0
+pillow=9.2.0=pypi_0
+pip=22.1.2=py37h06a4308_0
+protobuf=3.19.4=pypi_0
+pyasn1=0.4.8=pypi_0
+pyasn1-modules=0.2.8=pypi_0
+pyparsing=3.0.9=pypi_0
+python=3.7.1=h0371630_7
+readline=7.0=h7b6447c_5
+requests-oauthlib=1.3.1=pypi_0
+rsa=4.9=pypi_0
+setuptools=61.2.0=py37h06a4308_0
+six=1.15.0=pypi_0
+sqlite=3.33.0=h62c20be_0
+tensorboard=2.10.0=pypi_0
+tensorboard-data-server=0.6.1=pypi_0
+tensorboard-plugin-wit=1.8.1=pypi_0
+tensorflow=2.5.1=pypi_0
+tensorflow-estimator=2.5.0=pypi_0
+tensorflow-probability=0.13.0=pypi_0
+termcolor=1.1.0=pypi_0
+tk=8.6.12=h1ccaba5_0
+torchvision=0.13.1=pypi_0
+typing-extensions=3.7.4.3=pypi_0
+werkzeug=2.2.2=pypi_0
+wheel=0.37.1=pypi_0
+wrapt=1.12.1=pypi_0
+xz=5.2.5=h7f8727e_1
+zipp=3.8.1=pypi_0
+zlib=1.2.12=h7f8727e_2
